--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,8 @@
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
