--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 255, 255, 255;
@@ -9,8 +13,8 @@
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  margin: 0px;
+  padding: 0px;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
